objects/SFDC_520_Quote__c.object
<CustomObject>
    <description>Simple Quote object which holds dates and line items, many quotes may be related to a single opportunity, a quote may have many detail lines.</description>
    <fields>
        <fullName>Approval_Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Internally Approved</fullName>
                </value>
                <value>
                    <fullName>Presented to Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Accepted</fullName>
                </value>
                <value>
                    <fullName>Denied by Customer</fullName>
                </value>
                <value>
                    <fullName>*Convert to Order*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N46000003QckYEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presented_Date__c</fullName>
        <label>Presented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if quote is the primary quote to update the opportunity amount</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Amount__c</fullName>
        <label>Quote Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_Approval__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N46000000UCu4&amp;eid=&quot;&amp;Id, IMAGE(&quot;/servlet/servlet.ImageServer?oid=00D46000000aU4b&amp;id=01546000000tfi0&quot;, &quot;Submit&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_Until__c</fullName>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <label>Quote_OLD</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes_OLD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>